changement d'entites pour faire fonctionner les requetes d'ajout de feedback. pas sur que ca marche .

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,9 @@
 
     <link href="inspi/assets/css/animate.css" rel="stylesheet">
     <link href="inspi/assets/css/style.css" rel="stylesheet">
+    <style>
+        body {background-color:black;}
+    </style>
     
 
 </head>
