avant ajout de laffichage de vues selon les roles

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="inspi/assets/css/plugins/summernote/summernote.css">
     <link rel="stylesheet" href="inspi/assets/css/plugins/summernote/summernote-bs3.css">
 
+
     <link href="inspi/assets/css/animate.css" rel="stylesheet">
     <link href="inspi/assets/css/style.css" rel="stylesheet">
     <style>
@@ -46,10 +47,10 @@
                     </div>
                 </li>
                 <li class="active" style="font-size:11px">
-                    <a href="#"><i class="fa fa-table"></i> <span class="nav-label">Gestion des collaborateurs</span><span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-table"></i> <span class="nav-label">Gestion des employés</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li><a href="#/allCollabo"><i class="fa fa-circle-o"></i>Liste des collaborateurs</a></li>
-                        <li class="active"><a href="#/addCollabo"><i class="fa fa-circle-o"></i>Ajouter un collaborateur</a></li>
+                        <li class="active"><a href="#/addCollabo"><i class="fa fa-circle-o"></i>Ajouter un employé</a></li>
                     </ul>
                 </li>
                 <li class="active" style="font-size:11px">
@@ -179,7 +180,8 @@
    <!--  Summernote -->
      <script type="text/javascript" src="inspi/assets/js/plugins/summernote/summernote.min.js"></script>
    
-  
+
+        
     </div>
     </div>
     </div>
